--- a/Android/Source/AndroidManifest.xml
+++ b/Android/Source/AndroidManifest.xml
@@ -2,8 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="im.delight.opensoccer"
     android:sharedUserId="im.delight.opensoccer"
-    android:versionCode="1"
-    android:versionName="0.1.0">
+    android:versionCode="2"
+    android:versionName="0.1.1">
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="16" />
@@ -16,6 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
